# genie-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  utils.py
genie-cli/: db.py  genie-cli.py
genie_cli/: api.py  db.py  main.py  utils.py
genie_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
