[tool.poetry]
name = "genie-cli"
version = "1.0.2"
description = "A CLI for interacting with EnvGenie"
authors = ["Parikshit Misra <98179308+parikshit-parspec@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "genie_cli"}]

[tool.poetry.scripts]
genie-cli = "genie_cli.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.7.0"}
black = "^22.12.0"
isort = "^5.11.4"
requests = "^2.28.1"
pytz = "^2022.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
