[tool.poetry]
name = "genie-cli"
version = "1.2.1"
description = "A CLI for interacting with EnvGenie"
authors = ["Parikshit Misra <98179308+parikshit-parspec@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "genie_cli"}]

[tool.poetry.scripts]
genie-cli = "genie_cli.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.7.0"}
black = "^24.3.0"
isort = "^5.11.4"
requests = "^2.32.2"
pytz = "^2022.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
